--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
 SKIP_PREFLIGHT_CHECK=true
+REACT_APP_PRISMIC_ENDPOINT=https://alexandriebenkikiportfolio2021.prismic.io/api/v2
+REACT_APP_PRISMIC_ACCESS_TOKEN=MC5ZVndlcXhFQUFDVUF3ZUdo.77-977-9QycA77-977-977-9Sl0b77-977-977-9Be-_vX0i77-9BHjvv73vv73vv70ub--_vR_vv73vv73vv70H
