--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "bowser": "^2.11.0",
     "emailjs-com": "^3.2.0",
     "gsap": "^3.7.1",
     "node-sass": "^6.0.1",
