--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-fast-marquee": "^1.2.1",
+    "react-ga": "^3.3.0",
     "react-helmet": "^6.1.0",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.1.2"
